--- a/app/assets/stylesheets/cornell/_responsive-480px-max.css.scss
+++ b/app/assets/stylesheets/cornell/_responsive-480px-max.css.scss
@@ -54,7 +54,7 @@
 	.item-pagination { width: 100%; }
 	.item-tools {
 		float: none;
-		margin-top: 1.6em;
+		// margin-top: 1.6em;
 		width: 100%;
 		ul {
 			float: none;
